# noise-generator

./: .gitignore  Cargo.toml  README.md
.config/: config.json  config.toml
.github/workflows/: format.yml
src/: ascii.rs  cli.rs  config.rs  error.rs  generate.rs  generator.rs  lib.rs  main.rs  palette.rs  utils.rs
