[package]
name = "noise-generator"
authors = ["Rhelvetican <bionicvnb@gmail.com>"]
description = "A simple noise generator."
license = "MIT"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
image = "0.25.0"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
json_utils_2024 = "0.4"

[profile.release]
opt-level = 3
debug = false
lto = true
rpath = true
strip = "symbols"
