[package]
name = "noise-generator"
authors = ["Rhelvetican <bionicvnb@gmail.com>"]
description = "A simple noise generator."
license = "MIT"
version = "0.6.0"
edition = "2021"

[dependencies]
anyhow = "1"
image = "0.25.0"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
toml = "0.8.19"

[profile.release]
opt-level = 3
debug = false
lto = true
rpath = true
strip = "symbols"
