[package]
    authors     = ["Rhelvetican <bionicvnb@gmail.com>"]
    description = "A simple noise generator."
    edition     = "2021"
    license     = "MIT"
    name        = "noisegen"
    version     = "0.7.0"

[[bin]]
    name = "ng"
    path = "src/main.rs"

[dependencies]
    clap  = { version = "4", features = ["derive"] }
    serde = { version = "1", features = ["derive"] }

    image     = "0.25.0"
    rand      = "0.9"
    sha2      = "0.10"
    thiserror = "2"

    mimalloc = { version = "0.1", optional = true }

[features]
    default  = ["mimalloc"]
    mimalloc = ["dep:mimalloc"]
